--- a/app/src/main/res/menu/menu_activity_main.xml
+++ b/app/src/main/res/menu/menu_activity_main.xml
@@ -12,4 +12,9 @@
         android:title="Export text File"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/action_licenses"
+        android:title="Licenses"
+        app:showAsAction="never"/>
+
 </menu>
